[project]
name = "pasarguard-node-bridge-insecure"
version = "0.4.3"
description = "python package to connect your project with PasarGuard node go (insecure/no-TLS variant)"
url = "https://github.com/MatinDehghanian/node_bridge_py_insecure"
keywords = [
    "PasarGuard-Node",
    "PasarGuard",
    "PasarGuard-panel",
    "PasarGuard python",
    "PasarGuard API",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpclib>=0.4.8",
    "httpx>=0.28.1",
    "packaging>=23.1",
    "protobuf>=6.31.1",
]

classifiers = ["Programming Language :: Python :: 3.12"]

[project.urls]
Homepage = "https://github.com/MatinDehghanian/node_bridge_py_insecure"
Repository = "https://github.com/MatinDehghanian/node_bridge_py_insecure.git"

[dependency-groups]
dev = ["grpcio-tools>=1.73.1"]

[tool.ruff]
line-length = 120
exclude = ["PasarGuardNodeBridge/common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["PasarGuardNodeBridge"]
